个人通讯录，base64编码解码优化